[FIX] loyalty: empty list view on mobile
This commit fixes `.o_view_nocontent`'s mobile layout. Prior this
commit, it's content was overflowing on top of the page.

task-3418657
part of task-3015891

closes odoo/odoo#129115

X-original-commit: a51310a53ac3abf7435223e2d2a3215a3e60df50

--- a/addons/loyalty/static/src/scss/loyalty.scss
+++ b/addons/loyalty/static/src/scss/loyalty.scss
@@ -65,8 +65,8 @@
     }
 }
 
-.o_loyalty_program_list_view_view .o_list_renderer {
-    .o_view_nocontent {
-        top: 10% !important;
+.o_loyalty_program_list_view_view .o_list_renderer .o_view_nocontent{
+    @include media-breakpoint-down(lg){
+        height: fit-content;
     }
 }
